Added fake contents for character selection and spawn when levels start. Added keyboard commands. Intro Menu to be finished.Tutorial to be finished. Characters array to be filled with useful data.

--- a/Layouts/Intro.xml
+++ b/Layouts/Intro.xml
@@ -51,6 +51,33 @@
                         <opacity>1</opacity>
                     </world>
                 </instance>
+                <instance type="Text" uid="48">
+                    <properties>
+                        <text>P1: WASD + Spazio + Esc ------------- P2: Frecce + Invio + Backspace</text>
+                        <initial-visibility>Visible</initial-visibility>
+                        <font>Arial,-32,400,0</font>
+                        <color>255,255,255</color>
+                        <horizontal-alignment>Left</horizontal-alignment>
+                        <vertical-alignment>Top</vertical-alignment>
+                        <hotspot>Top-left</hotspot>
+                        <wrapping>Word</wrapping>
+                        <line-height>0</line-height>
+                    </properties>
+                    <blend-mode>0</blend-mode>
+                    <effect-fallback>0</effect-fallback>
+                    <world>
+                        <x>375</x>
+                        <y>1275</y>
+                        <z>0</z>
+                        <width>1675</width>
+                        <height>250</height>
+                        <depth>0</depth>
+                        <hotspotX>0</hotspotX>
+                        <hotspotY>0</hotspotY>
+                        <angle>0</angle>
+                        <opacity>1</opacity>
+                    </world>
+                </instance>
             </instances>
             <effects />
         </layer>
@@ -79,7 +106,7 @@
                     </properties>
                     <instance-variables>
                         <Order>2</Order>
-                        <Value>PlayInfinite</Value>
+                        <Value>PlayMultiplayer</Value>
                     </instance-variables>
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
@@ -105,7 +132,7 @@
                     </properties>
                     <instance-variables>
                         <Order>1</Order>
-                        <Value>PlayBestOf5</Value>
+                        <Value>PlaySinglePlayer</Value>
                     </instance-variables>
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
