--- a/Layouts/CharacterSelection.xml
+++ b/Layouts/CharacterSelection.xml
@@ -100,6 +100,7 @@
                     <instance-variables>
                         <CharacterNumber>1</CharacterNumber>
                         <IsAlreadySelected>false</IsAlreadySelected>
+                        <IsLocked>0</IsLocked>
                     </instance-variables>
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
@@ -126,6 +127,7 @@
                     <instance-variables>
                         <CharacterNumber>2</CharacterNumber>
                         <IsAlreadySelected>false</IsAlreadySelected>
+                        <IsLocked>0</IsLocked>
                     </instance-variables>
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
@@ -152,6 +154,7 @@
                     <instance-variables>
                         <CharacterNumber>3</CharacterNumber>
                         <IsAlreadySelected>false</IsAlreadySelected>
+                        <IsLocked>0</IsLocked>
                     </instance-variables>
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
@@ -178,6 +181,7 @@
                     <instance-variables>
                         <CharacterNumber>4</CharacterNumber>
                         <IsAlreadySelected>false</IsAlreadySelected>
+                        <IsLocked>1</IsLocked>
                     </instance-variables>
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
